--- a/src/app/components/book-list/book-list.component.scss
+++ b/src/app/components/book-list/book-list.component.scss
@@ -12,5 +12,10 @@ app-book-box {
   position: fixed;
   bottom: 2rem;
   right: 2rem;
-  z-index: 999;
+}
+
+.contact-fab-button {
+  position: fixed;
+  bottom: 6rem;
+  right: 2rem;
 }
